--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
   },
   "dependencies": {
     "gatsby": "^4.23.1",
+    "gatsby-plugin-manifest": "^4.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "gatsby-plugin-postcss": "^5.24.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
