--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.10.6",
     "gatsby": "^4.23.1",
     "gatsby-plugin-manifest": "^4.24.0",
     "react": "^18.1.0",
