--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.6",
+    "flatpickr": "^4.6.13",
     "gatsby": "^4.23.1",
     "gatsby-plugin-manifest": "^4.24.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-flatpickr": "^3.10.13",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
