--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.10.6",
+    "@mui/icons-material": "^5.10.9",
     "axios": "^1.1.0",
     "flatpickr": "^4.6.13",
     "gatsby": "^4.23.1",
     "gatsby-plugin-manifest": "^4.24.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-flatpickr": "^3.10.13",
