--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
+    "@react-google-maps/api": "^2.13.1",
     "axios": "^1.1.0",
     "flatpickr": "^4.6.13",
     "gatsby": "^4.23.1",
