--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "backend",
+  "name": "google-auth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^9.0.0"
   }
 }
