--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,11 @@
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-flatpickr": "^3.10.13",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
