--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.25.8",
     "uuid": "^9.0.0"
   }
