complete create hotel

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,4 @@
 REACT_GOOGLE_MAP_API_KEY=AIzaSyBI736gGYKAGc5YOVuOnkZB51GR-I6Z4gw
 BASE_URL=http://localhost:3000
+CLOUD_NAME=dkzu82npc
+NAME_UPLOAD=jqlebxmc
