--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.10.15",
     "@react-google-maps/api": "^2.13.1",
     "axios": "^1.1.0",
+    "dotenv": "^16.0.3",
     "flatpickr": "^4.6.13",
     "formik": "^2.2.9",
     "gatsby": "^4.23.1",
