--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.2.9",
     "gatsby": "^4.23.1",
     "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
@@ -43,6 +44,7 @@
     "recoil-persist": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "use-query-params": "^2.1.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
