--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "flatpickr": "^4.6.13",
     "formik": "^2.2.9",
     "gatsby": "^4.23.1",
+    "gatsby-plugin-image": "^3.2.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "jwt-decode": "^3.1.2",
@@ -42,6 +43,7 @@
     "react-token-auth": "^2.3.8",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "use-query-params": "^2.1.2",
