--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,8 @@
     "react-dom": "^17.0.0",
     "react-elastic-carousel": "^0.11.5",
     "react-flatpickr": "^3.10.13",
+    "react-select": "^5.7.0",
+    "react-select-async-paginate": "^0.7.2",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "react-token-auth": "^2.3.8",
@@ -46,6 +48,7 @@
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "use-debounce": "^9.0.2",
     "use-query-params": "^2.1.2",
     "yup": "^0.32.11"
   },
