--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.0",
     "react-elastic-carousel": "^0.11.5",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "react-select-async-paginate": "^0.7.2",
     "react-slick": "^0.29.0",
